Hardening de segurança no serviço de autenticação